# ChangeLog for sci-mathematics/dataplot
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Apr 2008; Thomas Anderson <gentoofan23@gentoo.org>
  dataplot-20080225.ebuild:
  Move -I/usr/include/GL from `use gd` conditional to `use gl`

  16 Apr 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  dataplot-20080225.ebuild:
  Various style fixes from bicatali

  14 Apr 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  dataplot-20080225.ebuild:
  Make DESCRIPTION a little nicer and more accurate

  12 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  dataplot-20080225.ebuild:
  Use alphabetical order

  12 Apr 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  dataplot-20080225.ebuild:
  Don't do "need_fortran g77 gfortran" but "need_fortran gfortran" until
  testing with g77 is done

  12 Apr 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  +dataplot-20080225.ebuild, +files/dpsrc-patchset-20080225.patch,
  +metadata.xml:
  New Ebuild for bug #217390, thanks to Tommy[D] for reviewing
