@@ -1,6 +1,6 @@
 AUX dpsrc-patchset-20080225.patch 2672 RMD160 5877cc97e034c52a4228fe19d87fc2d9a7ae043d SHA1 4377f353fb3de6f598884d542fc0c1842a3c29a9 SHA256 022995d5dca408d099c95165476c47f633a91273b931405cb1a90b27ae1113a1
 DIST dplib.02_25_2008.tar.gz 5340447 RMD160 51b5892c83bb5d420f324e3dab5edec24925f728 SHA1 3a77ed5e1e49f377083a11b8a177f678284b91f2 SHA256 7f9a30ae8ab029e0eeca4fbe08e665b572ec98a05ec001a67f95e4857d2a5b05
 DIST dpsrc.02_25_2008.tar.gz 6399167 RMD160 ed14f8ceb225e86f25026916ab4934a140f602ae SHA1 f1023d99ec7d2a64611dabedfbc5ad6f16e67cf7 SHA256 794bedcc48cf444c5813f864f4bacb158474d450337279edaf7fba1055c552c6
-EBUILD dataplot-20080225.ebuild 3040 RMD160 153c445e9d7808d6ce0b82eab77c1d2fad92c69c SHA1 896d70deaf2fb5c1525c1da84782212302c36c35 SHA256 4d2066d12a2eee922338ac3cd8ea6bc5afc03ba262867047de01dd3a49e0ae4e
-MISC ChangeLog 1085 RMD160 4955181356e93d6431ce0d4f5302b89f42ca1433 SHA1 a81eb3703ea0a16772a376838b5d6da8ec609a4f SHA256 771cb585cf9d58c6973048d460020968c519a7358ebf774a92c6268f17e0ad2e
+EBUILD dataplot-20080225.ebuild 3079 RMD160 46019d22e1a45ef7e3f06b0ac85bd41822b81d28 SHA1 6ee208442af18f1412abfc57142d81519708a979 SHA256 8d9c22193306e5b4e4bfaf59873d4bd4218d50ca368781fa7f9d3035ec581b6b
+MISC ChangeLog 1226 RMD160 981bd1d7614843b3d6817d0c5d3490e8bf623f82 SHA1 32c93b582209431dc941e93213910b50872405a8 SHA256 f098dcbd9886bbbdb2826f5ab0a1a8b9f5d757f0f1ebceda2e18db5d2a7ba454
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
