@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Apr 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
+  dataplot-20080225.ebuild:
+  Only do built_with_use check if USE='gd'
+
   19 Apr 2008; Thomas Anderson <gentoofan23@gentoo.org>
   dataplot-20080225.ebuild:
   Move -I/usr/include/GL from `use gd` conditional to `use gl`
